appId: com.peltops.e_imunisasi
---
- launchApp:
    clearState: true
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: Selanjutnya
- tapOn: Ayo Mulai
- assertVisible: Masuk dengan Seribase
