appId: com.peltops.e_imunisasi.debug
---
- launchApp
- extendedWaitUntil:
    visible: PIN
    timeout: 100000
- tapOn: PIN
- inputText: '1234'
- tapOn: Selanjutnya
- tapOn: Anak
- tapOn: Putra 4 tahun, 0 bulan
- tapOn: Putra
- inputText: Nasution
- tapOn: Simpan
