appId: com.peltops.e_imunisasi.debug
---
- runFlow: subflows/setup-chrome.yaml

- runFlow: onboarding-flow.yaml

- killApp
- launchApp

- tapOn:
    id: login_with_seribase_button
    repeat: 3
    delay: 1000
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 5000

- tapOn: Register

- runFlow:
    when:
      visible: Try out your stylus
    commands:
      - tapOn:
          id: closeButton

# Register Page - Email
- extendedWaitUntil:
    visible: First name
    timeout: 10000

- runFlow:
    when:
      visible: Try out your stylus
    commands:
      - tapOn:
          id: closeButton

- tapOn:
    text: Email
    index: 1

- runFlow:
    when:
      visible: Try out your stylus
    commands:
      - tapOn:
          id: closeButton

- inputRandomEmail
- tapOn: Next

- runFlow:
    when:
      visible: Try out your stylus
    commands:
      - tapOn:
          id: closeButton

# Register Page - password
- inputText: "Test123#"
- tapOn: Next

- runFlow:
    when:
      visible: Try out your stylus
    commands:
      - tapOn:
          id: closeButton

# Register Page - confirm pass
- inputText: "Test123#"
- tapOn: Next

- runFlow:
    when:
      visible: Try out your stylus
    commands:
      - tapOn:
          id: closeButton

# Register Page - first name
- inputRandomPersonName
- tapOn: Next

- runFlow:
    when:
      visible: Try out your stylus
    commands:
      - tapOn:
          id: closeButton

# Register Page - last name
- inputRandomPersonName
# Register Page - submit
- pressKey: Enter
- tapOn: Accept
- assertVisible: Email verification
- tapOn:
    id: close_button
- assertVisible: Masuk dengan Seribase
